[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["ZD-MEC <zivdi2273@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
seaborn = "^0.13.2"
matplotlib = "^3.10.8"
plotly = "^6.5.2"
streamlit = "^1.53.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
